now plotting approximation

--- a/_RotatingBot/RotatingBot.ipynb
+++ b/_RotatingBot/RotatingBot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -83,16 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYMAAAEPCAYAAACgFqixAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE81JREFUeJzt3X+wXGd93/H3B9tgLoqkOFGwqV3boXEbiCugChBKxhsc\nZzQaJzYpniYNjYFpNJO0g5shpjieiS7TH0nLBMikjWcUsEMmkVsTKBMHTJCN1mEGx7SOfwjbROCA\nsZOxDFgyMBRi0Ld/nJV8Lfb+2KvdPWe179fMnXt2z9nd7+6993zu8zznnCdVhSRpvj2r7QIkSe0z\nDCRJhoEkyTCQJGEYSJKAU9suYBRJPPRJktahqrLS+plrGVRV57927drVeg3WaZ2zWqN1jv9rLWYu\nDCRJ42cYSJIMg0no9Xptl7Am1jles1DnLNQI1tmGrLU/qQuS1CzVK0ldkIQ62QaQJUnjZxhIkgwD\nSZJhIEnCMJAk0UIYJLk+ycEk+4ese0uSI0nOmHZdkjTP2mgZ3ABsP/7OJOcAlwAPT70iSZpzUw+D\nqvoEcGjIqncCb51yOZIkOnLV0iSXAY9W1X3JiudFzIydO+HAAVhYgC1b4OGH4aGH4NxzYePGp+9b\nbf16HjPrz7lnD2zefOKf58LC8Oc6kZ/nib6PSb/mtH7Go7y3ld7HJOps47MZ5+9aa1q6gt55wP7B\n8gJwJ7BxcPvzwPct87jatWvXsa99+/ZVV110URU0X1u2PL087L7V1q/nMbP8nFdcMb7Pc9hznejP\n80Tex6Rfc1o/41He22rvYxJ1tvHZjOt3bRz27dv3jH1ls6tfeb/chaOJXkgTDvcm+TxwNnBXkh8Y\ntvHi4uKxry5fF2Rhofm+bRts3dosb9r03fettn49j2njOTduHN9z7t7Nd1nP57ncc63H0dc/0fcx\n6dec1u/NKO9tpfcxiTrb+GzG+bs2Dr1e7xn7yjVZLS0m8cWSlsGQdZ8Hzlhm3fgjdEIOHWr+Uzh0\n6OnlL3zhu+9bbf16HjPrzzmuz3O55zqRn+eJvo9Jv+a0fsbjeh+TqLONz2acv2uTwBpaBlO/UF2S\nG4GLgO8DHgd+o6puWLL+b4BtVfXEkMfWtOuVpFm3lgvVedVSSTrJedVSSdKaGAaSJMNAkmQYSJIw\nDCRJGAaSJAwDSRKGgSQJw0CShGEgScIwkCRhGEiSMAwkSRgGkiQMA0kShoEkCcNAHbdzJ/R6sGMH\nHD7cdjXSycswUKcdOAC33w633NIEg6TJMAzUaQsLzfdt22D37nZrkU5mp7ZdgHS8nTubFsHCAlx3\nHVx9dRMEmze3XZl08jIM1DlHu4agCYKbbmq3HmketNJNlOT6JAeT7F9y3zuSPJjk3iQfTLKpjdrU\nPruGpOlra8zgBmD7cfd9DHhxVW0FDgDXTL0qdcKePXDFFbB3r11D0rSkqtp54eQ84OaqunDIutcC\n/6KqXn/c/dVWvZI0q5JQVVlpm64eTfQm4CNtFyFJ86JzA8hJrgX+vqr2DFu/uLh4bLnX69Hr9aZT\nmCTNiH6/T7/fH+kxneomSvIG4JeAi6vqm0MeYzeRJI1oLd1EnWkZJNkOXA1cNCwIJEmT00rLIMmN\nwEXA9wMHgV00Rw89G3hisNkdVfUrxz3OloEkjWgtLYPWuonWwzCQpNHN8tFEkqQpMgwkSYaBtBzn\nUtA8MQykZTiXguaJYSAtwwvmaZ505jwDqQucS0HzyjCQlnAuBc0ru4mkJewa0rzypDNpicOHm64i\nu4Z0MvEMZEmSZyBLktbGMJAkGQaSJMNAkoRhIEnCMJAkYRhIkjAMJEkYBpIkDANJEoaBJIkWwiDJ\n9UkOJtm/5L4zkuxNciDJx5J4iTBJmqI2WgY3ANuPu+9twN6qugC4bXBbkjQlUw+DqvoEcOi4u38G\neN9g+X3A5VMtSpLmXFfGDJ5fVQcHyweB57dZjCTNm85Ne1lVlWTZSQsWFxePLfd6PXq93hSqkqTZ\n0e/36ff7Iz2mlcltkpwH3FxVFw5ufwboVdVjSc4C9lXVPxnyuE5PbrN0MvU9e5wpS1I3zNLkNn8K\nXDlYvhL4UIu1rNvRydRvuaUJBknzYedO6PVgx45m6tRZ1MahpTcCnwT+cZJHkrwR+C3gkiQHgNcM\nbs8cJ1OX5tPJ8I+gcyCPkZOpS/Npx44mCLZtg717u/f3v5ZuIsNAkk5Q1/8RNAwkSTM1gCxJapFh\nIEkyDCRJhoEkCcNgLE6GE04kjces7g8MgzE4GU44kTQes7o/MAzGwDOPJR01q/sDzzMYg66fcCJp\nerq4P/CkM0mSJ51JktbGMJAkGQaSJMNAkoRhIEnCMJAkYRhIkjAMJEkYBpIkOhYGSa5Jcn+S/Un2\nJHlO2zVJ0jzoTBgkOQ/4JeBlVXUhcArwc23WJEnz4tS2C1jiq8BTwEKS7wALwN+2W5IkzYfOtAyq\n6gngt4EvAn8HHK6qW9utSpLmQ2fCIMkLgX8PnAe8ANiQ5BdaLUqS5kSXuom2AZ+sqq8AJPkg8Crg\nj5dutLi4eGy51+vR6/WmV6EkzYB+v0+/3x/pMWuezyDJ84BfAH6EZnD3dOAI8HXgL4H3V9WRkV79\nmc+/lWbH/6PAN4E/AD5VVf9jyTbOZyBJIxrb5DZJLgFeBPxZVT103LoAW4GfBG6tqntOoOC3AlfS\nhMxfAf+mqp5ast4wkKQRjSUMkpwOnF1Vn1vDC15YVftHK3PtDANJGt04WwYvBF4HbAIeAe44kRbA\nehkGkjS6cU57+RrgA8BtwMXAf0pyl0f7SNLJYa1h8CxgQ1XdBtxcVZfSHOlzJMkvT6w6SdJUrDUM\ndgO9JLcClye5FHgh8Clgw6SKkyRNx5oPLQVIchpNl9GPAWcBXwFunOSg8XGv75iBJI1oXEcTPQf4\nnqr68hpe8B9W1RdHK3PtDANJGt1YBpCr6lvAK5P8qyTPXeaFvjfJTuDc9ZUqSWrTKGcgnwW8EfgB\nmrOPTwO+A3wDeBT4/ap6ckJ1Hq3BloEkjWhs5xkc96TPozmy6OCJFLcehoEkjW4tYbCeC9W9HvhW\nkp8FvgzcVFUfXU+BkqRuWM8lrP8f8ABwRlW9Cdg43pIkSdO2njD4K5rpKN+c5A106zLYkqR1GHnM\n4BkPbq5m+nhV3Tu+klZ8PccMJGlEExlAbpNhIEmjG+eF6iRJJzHDQJJkGEiSDANJ67BzJ/R6sGMH\nHD7cdjUaB8NA0sgOHIDbb4dbbmmCQbPPMJA0soWF5vu2bbB7d7u1aDw8tFTSyA4fbloEu3fD5s3f\nvX7nzqb1sLAAe/YM30bTM3PnGSTZDLwHeDFQwJuq6i+XrDcMpI4ZtuPv9ZpuJIArroCbbmq1xLk3\nqQvVTdLvAB+pqtclORV4XtsFaXb53+l0HB0/ALjggqbr6LTTmtt2I82OzowZJNkE/HhVXQ9QVd+e\n9PwIOrk5yDkdR8cPNmyAL32p+bw3bGhaBHv3GsKzokstg/OBLyW5AdgK3AVcVVXfaLcszSoHOadj\nz54mbA8dgltvbT7vG24wBGZNZ8YMkmwD7gBeVVX/J8m7ga9W1W8s2aZ27dp17DG9Xo9erzf1WjUb\nVhvk1Hj5eXdHv9+n3+8fu/32t799dgaQk5wJ3FFV5w9uvxp4W1VdumQbB5AlaUQzdaG6qnoMeCTJ\nBYO7fhK4v8WSJGludKZlAJBkK82hpc8GHgLeuHQQ2ZaBJsUjj3Qym7nzDFZjGGi9VtvZd+W4eENJ\nkzBT3UTSJK12mGlXjjzycFi1pUuHlkoTs3Rn/9znNi2Bhx6Cc8+FjRvhuuvg6qvbPxKmK6Gk+WM3\nkebC0sMeL7/86S6hoybRNbSeLh8Pz9QkOGYgDbFjR9MNs2kTPPlk81/4JM6U7co4hOSYgTTEnj3N\nzvneeyd7yQS7fDRLbBlIE2KXj7rCbiJJkt1EUhesNl+w8wmrCwwDacJWO3fAcwvUBZ5nIE3YsHMc\nFhZgyxZ4+GG4//6n1zvQrLY4ZiBN2HLnOGzZ0kwGA3D22bB/vwPNmgzHDKQO2Ly5Ocdg8+ZnthK2\nbn162SBQ22wZSFO0tJUAHnqq6fDQUkmS3USSpLUxDCRJhoEkyTCQJGEYSJIwDCRJGAaSJDoYBklO\nSXJ3kpvbrkWS5kXnwgC4CngA8OwySZqSToVBkrOBHcB7gBXPlpMkjU+nwgB4F3A1cKTtQiRpnnRm\nPoMklwKPV9XdSXrLbbe4uHhsudfr0estu6kkzaV+v0+/3x/pMZ25UF2S/wL8a+DbwOnARuADVfWL\nS7bxQnWSNKKZvWppkouAX6uqnz7ufsNAkkY061ctda8vSVPSyZbBcmwZSNLoZr1lIEmaEsNAkmQY\nSJIMA0kShoEkCcNAkoRhIEnCMJAkYRhIkjAMJEkYBpIkDANJEoaBJAnDQJKEYSBJwjCQJGEYSJIw\nDCRJGAaSJAwDSRKGgSSJjoVBknOS7Etyf5JPJ3lz2zVJ0jxIVbVdwzFJzgTOrKp7kmwA7gIur6oH\nB+urS/VK0ixIQlVlpW061TKoqseq6p7B8teBB4EXtFuVJJ38OhUGSyU5D3gpcGe7lUjSye/UtgsY\nZtBF9CfAVYMWwjGLi4vHlnu9Hr1eb6q1SVLX9ft9+v3+SI/p1JgBQJLTgD8Dbqmqdx+3zjEDSRrR\nWsYMOhUGSQK8D/hKVf3qkPWGgSSNaBbD4NXAXwD3AUcLu6aqPjpYbxhI0ohmLgxWYxhI0uhm7tBS\nSVI7DANJkmEgSTIMJEkYBpIkDANJEoaBJAnDQJKEYSBJwjCQJGEYSJIwDCRJGAaSJAwDSRKGgSQJ\nw0CShGEgScIwkCRhGEiSMAwkSXQsDJJsT/KZJJ9N8h/arkeS5kVnwiDJKcB/B7YDLwJ+PskPt1vV\n+vT7/bZLWBPrHK9ZqHMWagTrbENnwgB4OfC5qvpCVT0F/E/gspZrWpdZ+QWxzvGahTpnoUawzjZ0\nKQz+AfDIktuPDu6TJE1Yl8Kg2i5AkuZVqrqxD07ySmCxqrYPbl8DHKmq/7pkm24UK0kzpqqy0vou\nhcGpwF8DFwN/B3wK+PmqerDVwiRpDpzadgFHVdW3k/w74M+BU4D3GgSSNB2daRlIktrTpQHkkSR5\nS5IjSc5ou5ZhkvzHJPcmuSfJbUnOabumYZK8I8mDg1o/mGRT2zUdL8kVSe5P8p0kL2u7nuPNwsmS\nSa5PcjDJ/rZrWUmSc5LsG/y8P53kzW3XNEyS05PcOfj7fiDJb7Zd03KSnJLk7iQ3r7TdTIbBYMd6\nCfBw27Ws4L9V1daqegnwIWBX2wUt42PAi6tqK3AAuKbleobZD7wW+Iu2CzneDJ0seQNNjV33FPCr\nVfVi4JXAv+3i51lV3wR+YvD3/U+Bn0jy6pbLWs5VwAOscsTmTIYB8E7grW0XsZKq+tqSmxuAL7dV\ny0qqam9VHRncvBM4u816hqmqz1TVgbbrWMZMnCxZVZ8ADrVdx2qq6rGqumew/HXgQeAF7VY1XFV9\nY7D4bJpxzidaLGeoJGcDO4D3ACseTTRzYZDkMuDRqrqv7VpWk+Q/J/kicCXwW23XswZvAj7SdhEz\nxpMlJyTJecBLaf5J6Zwkz0pyD3AQ2FdVD7Rd0xDvAq4Gjqy2YWeOJloqyV7gzCGrrqXpxvippZtP\npaghVqjz16vq5qq6Frg2ydtofihvnGqBA6vVOdjmWuDvq2rPVIsbWEuNHeURGBOQZAPwJ8BVgxZC\n5wxa1C8ZjLP9eZJeVfVbLuuYJJcCj1fV3Ul6q23fyTCoqkuG3Z/kR4DzgXuTQNOlcVeSl1fV41Ms\nEVi+ziH20OJ/3KvVmeQNNE3Ji6dS0BAjfJZd87fA0oMDzqFpHWidkpwGfAD4o6r6UNv1rKaqnkzy\nYWAb0G+5nKVeBfxMkh3A6cDGJH9YVb84bOOZ6iaqqk9X1fOr6vyqOp/mj+5lbQTBapL80JKblwF3\nt1XLSpJsp2lGXjYYFOu61lqCy/i/wA8lOS/Js4F/CfxpyzXNrDT/5b0XeKCq3t12PctJ8v1JNg+W\nn0tzQEun/sar6ter6pzBvvLngI8vFwQwY2EwRJeb6L+ZZP+gT7EHvKXlepbzuzQD3HsHh5/9XtsF\nHS/Ja5M8QnN0yYeT3NJ2TUdV1beBoydLPgD8ry6eLJnkRuCTwAVJHknSSpflGvxz4PU0R+fcPfjq\n4lFQZwEfH/x93wncXFW3tVzTalbcX3rSmSRp5lsGkqQxMAwkSYaBJMkwkCRhGEiSMAwkSRgGkiQM\nA0kSHb02kTRNg0sg7KS5suPHq+qhlkuSps6WgdRM/nEnsA94Xcu1SK0wDDTXBlfIvHQwocq5QOem\n/ZSmwTDQvHsN8LUkVwK/zDMnqpHmhmGgefdjwHur6n0013y/o+V6pFYYBpp3ZwF/k+Q5wFlH5989\nKsn3JNk9rWKS/KMku6b1etJRhoHm3VeAbwE/C7xzyPpvAl+YYj2bgNun+HoS4HwGmnNJLgS2A1+v\nquuSbAN+GvgozY75a8AC8FmayXVeQjOT2XbgfwMvqqo/TvLDwCuAx4H9NFMObhw8zyuALcCHgZcP\nlt8PvIhmFrxHB8/1CuBHgWur6lsTf/PSErYMNNeqan9VvaOqrhvc9UXgMHAIOJNmTOEemsNPbwKe\nBB4DHgaeAr4xeNxbgfuAhwbLN1XV7wO/RjOf76nAdYPlU4DvpWlx3FdV7xo8//uBg4PnlabKMJCe\n6WLgq8CPA3todv4/CHyOZsLz59BMy3gr8M94Ogw+Pvi+QDMX7ksHrYx7aP7jP0Szs38FcLiqPksz\nxeOtg8cdff7TaVoM0lTZTSQNJDkdeA/w5qp6ou16pGkyDCRJdhNJkgwDSRKGgSQJw0CShGEgScIw\nkCRhGEiSMAwkScD/BwN9634iHMwRAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYMAAAEPCAYAAACgFqixAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFHBJREFUeJzt3X+Q3HV9x/HnWxJ+HHiJaDRYIIlWp6IUoaegtcMq0Ikp\nLeiYVqsVderN2FqoY6EgM+ZmOq1tmYKd/nAmKtFOOWr8UStq1AOy6ChiqwQiwZ5G+aVDEMiBjAWj\nefeP716ynHt3u5e9/X739vmYubnv7vf73e87383taz+fz/dHZCaSpMH2lLILkCSVzzCQJBkGkiTD\nQJKEYSBJApaVXUAnIsJDnyRpATIz5prfdy2DzKz8z6ZNm0qvwTqts19rtM7u/7Sj78JAktR9hoEk\nyTBYDLVarewS2mKd3dUPdfZDjWCdZYh2+5OqICKyn+qVpCqICHKpDSBLkrrPMJAkGQaSJMNAkoRh\nIEmihDCIiKsjYk9E7Gwx790RsT8iju11XZI0yMpoGWwB1s98MiJOAM4B7u55RZI04HoeBpn5FWBv\ni1lXApf0uBxJEhW5amlEnAfcl5m3R8x5XkQljY7C5CTs3g1r1sDwMKxaBXffDUNDB6cXMn+pvObQ\nEIyPw8qV3du3i7HN6e3NfJ2q7e925i9kf3f6HnRzO+3WUcX3o+x90xUlXUFvLbCzMT0E3AIMNx7/\nAHj6LOvlpk2bDvxs3749q+DMMzPhyT+rVrWeXsj8pfKaGzd2f992e5vN26v6/p5v/kL290Leg25t\np5M6qvh+lLlvZtq+ffuTPiuLj/p5PpfnW2AxfmaEwcnAnkYI/ADYB9wFPLPFeou06w7Nq19d7MkV\nK4rfIyOZZ5/9y9MLmd8vrzk8PPc6IyOZe/d2d9/OV+dCtjm9varv73bmL2R/d/oedHM77dZRxfej\n7H0zn74IgxbzfgAcO8u87u+lLti7t/gGcNddxe+9ew8+1zy9kPlL5TUX+kfR623O9jpV29/tzO+W\nXm2n3Tqq+H6UvW/m004Y9PxCdRFxLXAm8HTgAeC9mbmlaf73gZHMfLjFutnreiWp37VzoTqvWipJ\nS5xXLZUktcUwkCQZBpIkw0CShGEgScIwkCRhGEiSMAwkSRgGkiQMA0kShoEkCcNAkoRhIEnCMJAk\nYRhIkjAMJEkYBpIkDANJEoaBJAnDQJKEYSBJoqQwiIirI2JPROxseu6KiLgzIm6LiE9FxIoyapOk\nQVRWy2ALsH7Gc18CXpiZpwCTwGU9r0qSBlQpYZCZXwH2znhuIjP3Nx7eAhzf88IkaUBVdczgbcDn\nyy5CkgbFsrILmCkiLgd+lpnjreaPjY0dmK7VatRqtd4UJkl9ol6vU6/XO1onMnNxqplvwxFrgesy\n8+Sm594CvB04KzMfb7FOllWvJPWriCAzY65lKtMyiIj1wMXAma2CQJK0eEppGUTEtcCZwDOAPcAm\niqOHDgcebix2c2b+yYz1bBlIUofaaRmU1k20EIaBJHWunTCo6tFEkqQeMgwkSYaBJMkwkCRhGEiS\nMAwkSRgGkiQMA0kShoEkCcNAkoRhIEnCMJAkYRhIkjAMJEkYBpIkDANJEoaBKmh0FGo12LABpqbK\nrkYaDIaBKmdyEm66CbZtK4JBg8EvAeUyDFQ5Q0PF75ER2Ly53FrUO34JKJdhoMoZH4eNG2FiAlau\nLLsa9YpfAsoV/XSD+YjIfqpXUvumpooWwebNfgnotoggM2POZXr94RoRVwO/AzyQmSc3njsW+Biw\nBrgL+P3M/KVeQ8NAGiyjo0X30dBQ0WI0JBamnTAoo5toC7B+xnOXAhOZ+XzghsZjSQPOcYTeKaWb\nKCLWAtc1tQy+A5yZmXsiYjVQz8xfa7GeLQNpAEy3CO64Ax58sBhHcAxp4dppGSzrVTHzeFZm7mlM\n7wGeVWYxkso13SIAOP54g6AXqhIGB2RmRsSsX//HxsYOTNdqNWq1Wg+qktRLzUcWGQSdq9fr1Ov1\njtapUjdRLTPvj4jjgO12E0mDyyOLuquqA8itfAa4oDF9AfDpEmuRVLKVK2HrVoOgl8o4tPRa4Ezg\nGRTjA+8F/gvYCpyIh5ZKUldV8jyDQ2EYSFLn+qmbSJJUIsNAkmQYSJIMA0kShoEkCcNAkoRhIEnC\nMJAkYRhIkjAMJEkYBpIkDANJEoaBJAnDQJKEYSBJwjCQJGEYSJIwDCRJGAaSJAwDSRIVC4OIuCwi\n7oiInRExHhFHlF2TJA2CyoRBRKwF3g6clpknA4cBry+zJkkaFMvKLqDJo8A+YCgifgEMAT8styRJ\nGgyVaRlk5sPAPwD3AD8CpjLz+nKrkqTBUJkwiIjnAn8OrAWeDRwTEW8stShJGhBV6iYaAb6WmQ8B\nRMSngJcD1zQvNDY2dmC6VqtRq9V6V6Ek9YF6vU69Xu9oncjM9haMOBp4I/AiisHdI4H9wGPA14GP\nZ+b+jrb+5Nc/heKD/yXA48BHgG9k5r80LZPt1qtqGR2FyUkYGoLxcVi5suyKpMEREWRmzLlMOx+u\nEXEOcBLw2czcPWNeAKcAZwPXZ+aOQyj4EuACipD5FvDHmbmvab5h0KdqNbjppmJ640bYurXUcqSB\n0pUwiIgjgeMz83ttbPDkzNzZWZntMwz614YNsG0bjIzAxIQtA6mXutkyeC7wOmAFcC9w86G0ABbK\nMOhfU1NFV9HmzQaB1GvdDIO3A9uBNcA7KMYLjgOuzMxr5lq3mwyDpcsxBWnxtBMG7R5a+hTgmMy8\nAbguM8+lONJnf0S84xDrlJicLMYUtm0rgkFSb7UbBpuBWkRcD5wfEecCzwW+ARyzWMVpaRodLQaU\nN2wouo+gaBFAMaaweXNppUkDq+1DSwEiYjnwKuBlFN1EDwHXLuag8Yzt2020BDQfWbRuHZx4Iixf\nDkcfDR/5iF1EUre1000070lnjSuHPjUzH2wc5vnFxk+rZU/MzHsWVK0GRnMr4IgjnnzIqUEglWPe\nbqLMfAI4IyL+MCKOarVMRDwtIkYpBpilOY2PFx/8ExMwPFw8Z/eQVK5OzkA+Dngr8EyKo4mWA78A\nfgrcB3wwMx9ZpDqna7CbaInxkFNp8XXt0NIZL3o0xZFFew6luIUwDCSpc10ZM2jhTcATEfFa4EFg\na2Z+YSEFSpKqYSGXsP4/YBdwbGa+DRjubkmSpF5bSBh8i+J2lBdGxFuo1mWwJUkL0PGYwZNWLq5m\n+kBm3ta9kubcnmMGktShRRlALpNhIEmd6+a1iSRJS5hhIEkyDCRJhoEkCcNAkoRhIEnCMJAkUbEw\niIiVEfGJiLgzInZFxBll1yRJg6Bql5L4R+Dzmfm6iFgGHF12Qepfo6PFvZWHhop7KHiJbGl2lTkD\nOSJWALdm5nPmWMYzkNW25ttrbtwIW7eWWo5Umn47A3kd8OOI2BIR34qID0bEUNlFqX81317Tu6hJ\nc6tSN9Ey4DTgnZn53xHxfuBS4L3NC42NjR2YrtVq1Gq1HpaofjI+7l3UNJjq9Tr1er2jdarUTbQa\nuDkz1zUevwK4NDPPbVrGbiItCscXtJT1VTdRZt4P3BsRz288dTZwR4klaYBMThbjC9u2FcEgDZoq\ndRMB/BlwTUQcDuwG3lpyPVoi5vvm7/iCBl1luonaYTeRFmq+I4umphxf0NLVTjdR1VoG0qJo/uZ/\n1FFFOOzeDWvWwPBw0Vrw0FMNMlsGGgjN3/zPP/9gK2Ga5yFoKbNlIDWsXHnww366lbBiBTzyiOME\nElToaCKpV8bHi5bAbbcVvycmHCeQ7CaSpCWur84zkCSVxzCQJBkGkiTDQJKEYSBJwjCQJGEYSJIw\nDCRJGAaSJAwDSRKGgSQJw0CShGEgScIwkCRhGEiSMAwkSVQwDCLisIi4NSKuK7sWSRoUlQsD4CJg\nF+AtzSSpRyoVBhFxPLAB+BAw5y3aJEndU6kwAK4CLgb2l12IJA2SZWUXMC0izgUeyMxbI6I223Jj\nY2MHpmu1GrXarItKqrjRUZichKEhGB+HlSvLrmhpqNfr1Ov1jtaJzGp0zUfE3wB/BPwcOBIYBj6Z\nmW9uWiarUq+kQ1erwU03FdMbN8LWraWWs2RFBJk5Z9d7ZbqJMvM9mXlCZq4DXg/c2BwEkpaeoaHi\n98gIbN5cbi2DrjJh0IJNAKkPjI4W3/A3bICpqc7WHR8vWgQTE3YRla0y3UTtsJtIqp6FdPU4VtBb\nfdVNJKk/LaSrZ3KyCJBt24pgUPlsGUj6JZ18c5+aKpY/6ii4++7Z12l+zX374PrriwCxi2jxtdMy\nMAykJehQu2EW0vXTvM66dXDiicX2V60qQuL222Hv3mL++efD8uVFS8IgWHzthEFlzjOQ1D3T3TBQ\nBEOnh2wupOuneZ0jjji4/VWr4Mc/PrjcyAhs2WIIVI1jBtISdKiHbC7kKJ/mdYaHD27/lFOK6VNP\nhfPOs1uoquwmkpag6X78zZvhkkva7zLq1lE+zduffl27hMrjmIGkln35u3fDmjXFN/jpPv2hIXj0\nUfjqV4tlPSN46XDMQNKsffn33Vf8bu7TX7364LKeETxYHDOQlrhWffkrVhS/m/v0R0bg61/3jOBB\nZTeRNECm+/KvuAIuvtg+/UHhmIEkyctRSJLaYxhIkgwDSZJhIEnCMJAkYRhIkjAMJEkYBpIkDANJ\nEoaBJImKhUFEnBAR2yPijoj4dkRcWHZNkjQIKnVtoohYDazOzB0RcQzwTeD8zLyzMd9rE0lSh/ru\n2kSZeX9m7mhMPwbcCTy73KokaemrVBg0i4i1wKnALeVWIklLXyXvdNboIvoEcFGjhXDA2NjYgela\nrUatVutpbZJUdfV6nXq93tE6lRozAIiI5cBngW2Z+f4Z8xwzkKQO9d3NbSIigI8CD2Xmu1rMNwwk\nqUP9GAavAL4M3A5MF3ZZZn6hMd8wkKQO9V0YzMcwkKTO9d2hpZKkchgGkiTDQJJkGEiSMAwkSRgG\nkiQMA0kShoEkCcNAkoRhIEnCMJAkYRhIkjAMJEkYBpIkDANJEoaBJAnDQJKEYSBJwjCQJGEYSJKo\nWBhExPqI+E5EfDci/rLseiRpUFQmDCLiMOCfgfXAScAbIuIF5Va1MPV6vewS2mKd3dUPdfZDjWCd\nZahMGAAvBb6XmXdl5j7gP4DzSq5pQfrlP4h1dlc/1NkPNYJ1lqFKYfArwL1Nj+9rPCdJWmRVCoMs\nuwBJGlSRWY3P4Ig4AxjLzPWNx5cB+zPz75qWqUaxktRnMjPmml+lMFgG/C9wFvAj4BvAGzLzzlIL\nk6QBsKzsAqZl5s8j4p3AF4HDgA8bBJLUG5VpGUiSylOlAeSORMS7I2J/RBxbdi2tRMRfRcRtEbEj\nIm6IiBPKrqmViLgiIu5s1PqpiFhRdk0zRcTGiLgjIn4REaeVXc9M/XCyZERcHRF7ImJn2bXMJSJO\niIjtjff72xFxYdk1tRIRR0bELY2/710R8b6ya5pNRBwWEbdGxHVzLdeXYdD4YD0HuLvsWubw95l5\nSma+GPg0sKnsgmbxJeCFmXkKMAlcVnI9rewEXgN8uexCZuqjkyW3UNRYdfuAd2XmC4EzgD+t4v7M\nzMeBVzb+vn8deGVEvKLksmZzEbCLeY7Y7MswAK4ELim7iLlk5k+aHh4DPFhWLXPJzInM3N94eAtw\nfJn1tJKZ38nMybLrmEVfnCyZmV8B9pZdx3wy8/7M3NGYfgy4E3h2uVW1lpk/bUweTjHO+XCJ5bQU\nEccDG4APAXMeTdR3YRAR5wH3ZebtZdcyn4j464i4B7gA+Nuy62nD24DPl11En/FkyUUSEWuBUym+\npFRORDwlInYAe4Dtmbmr7JpauAq4GNg/34KVOZqoWURMAKtbzLqcohvjt5sX70lRLcxR53sy87rM\nvBy4PCIupXhT3trTAhvmq7OxzOXAzzJzvKfFNbRTY0V5BMYiiIhjgE8AFzVaCJXTaFG/uDHO9sWI\nqGVmveSyDoiIc4EHMvPWiKjNt3wlwyAzz2n1fES8CFgH3BYRUHRpfDMiXpqZD/SwRGD2OlsYp8Rv\n3PPVGRFvoWhKntWTglroYF9WzQ+B5oMDTqBoHWiBImI58Eng3zPz02XXM5/MfCQiPgeMAPWSy2n2\ncuD3ImIDcCQwHBH/lplvbrVwX3UTZea3M/NZmbkuM9dR/NGdVkYQzCcintf08Dzg1rJqmUtErKdo\nRp7XGBSrutJagrP4H+B5EbE2Ig4H/gD4TMk19a0ovuV9GNiVme8vu57ZRMQzImJlY/ooigNaKvU3\nnpnvycwTGp+VrwdunC0IoM/CoIUqN9HfFxE7G32KNeDdJdczm3+iGOCeaBx+9q9lFzRTRLwmIu6l\nOLrkcxGxreyapmXmz4HpkyV3AR+r4smSEXEt8DXg+RFxb0SU0mXZht8E3kRxdM6tjZ8qHgV1HHBj\n4+/7FuC6zLyh5JrmM+fnpSedSZL6vmUgSeoCw0CSZBhIkgwDSRKGgSQJw0CShGEgScIwkCRR0WsT\nSb3UuATCKMWVHW/MzN0llyT1nC0Dqbj5xy3AduB1JdcilcIw0EBrXCHz3MYNVdYAlbvtp9QLhoEG\n3auAn0TEBcA7ePKNaqSBYRho0L0M+HBmfpTimu83l1yPVArDQIPuOOD7EXEEcNz0/XenRcRTI2Jz\nr4qJiF+NiE292p40zTDQoHsIeAJ4LXBli/mPA3f1sJ4VwE093J4EeD8DDbiIOBlYDzyWmR+IiBHg\nd4EvUHww/wQYAr5LcXOdF1PcyWw98J/ASZl5TUS8ADgdeADYSXHLweHG65wOrAI+B7y0Mf1x4CSK\nu+Dd13it04GXAJdn5hOL/o+Xmtgy0EDLzJ2ZeUVmfqDx1D3AFLAXWE0xprCD4vDTrcAjwP3A3cA+\n4KeN9S4Bbgd2N6a3ZuYHgb+guJ/vMuADjenDgKdRtDhuz8yrGq//cWBP43WlnjIMpCc7C3gU+C1g\nnOLD/znA9yhueH4ExW0Zrwd+g4NhcGPj9xDFvXBPbbQydlB8499L8WF/OjCVmd+luMXj9Y31pl//\nSIoWg9RTdhNJDRFxJPAh4MLMfLjseqReMgwkSXYTSZIMA0kShoEkCcNAkoRhIEnCMJAkYRhIkjAM\nJEnA/wMslgipgdRl2gAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10a5c8950>"
+       "<matplotlib.figure.Figure at 0x11c1ef190>"
       ]
      },
      "metadata": {},
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -255,52 +255,41 @@
     "\n",
     "ani = animation.FuncAnimation(fig, animate, np.arange(1, len(y)),\n",
     "    interval=20, blit=False, init_func=init)\n",
-    "#ani.save('bot.mp4', fps=20, bitrate=5000, codec=\"h264\", writer=writer)\n",
+    "ani.save('bot.mp4', fps=20, bitrate=5000, codec=\"h264\", writer=writer)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "os.system(\"rm bot_h264.mp4\")\n",
-    "os.system(\"avconv -i bot.mp4 -c:v h264 -c:a copy bot_h264.mp4\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import io\n",
-    "import base64\n",
-    "from IPython.display import HTML\n",
     "\n",
-    "video = io.open('/Users/pflomacpro/GeometricPDEs/_RotatingBot/bot_h264.mp4', 'r+b').read()\n",
-    "encoded = base64.b64encode(video)\n",
-    "HTML(data='''<video alt=\"test\" controls>\n",
-    "                <source src=\"data:video/mp4;base64,{0}\" type=\"video/mp4\" />\n",
-    "             </video>'''.format(encoded.decode('ascii')))"
+    "# os.system(\"rm bot_h264.mp4\")\n",
+    "# os.system(\"avconv -i bot.mp4 -c:v h264 -c:a copy bot_h264.mp4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# import os\n",
+    "# import io\n",
+    "# import base64\n",
+    "# from IPython.display import HTML\n",
+    "\n",
+    "# video = io.open('/Users/pflomacpro/GeometricPDEs/_RotatingBot/bot_h264.mp4', 'r+b').read()\n",
+    "# encoded = base64.b64encode(video)\n",
+    "# HTML(data='''<video alt=\"test\" controls>\n",
+    "#                 <source src=\"data:video/mp4;base64,{0}\" type=\"video/mp4\" />\n",
+    "#              </video>'''.format(encoded.decode('ascii')))"
    ]
   },
   {
