--- a/_Plane/Plane.ipynb
+++ b/_Plane/Plane.ipynb
@@ -27,7 +27,7 @@
     "import math\n",
     "\n",
     "\n",
-    "metadata = dict(title='Rotating Bot', artist='Pete Florence',\n",
+    "metadata = dict(title='Quad 2D', artist='Pete Florence',\n",
     "        comment='Rotate time')\n",
     "writer = animation.AVConvWriter(fps=20, metadata=metadata, bitrate=5000)\n",
     "\n",
@@ -122,9 +122,9 @@
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYQAAAEPCAYAAABCyrPIAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEaBJREFUeJzt3X2QXXV9x/H3V0BhRVgoKaSKYK1ORWnApuBTh6tUJ81Q\niR3TanWK2ul2nLbY1lZRZpqd2o6tjg8z7ZSZVWDo1NCGWinURgmQTRmrOFqiwUBXaUFoS/AhKzBW\nS823f5zfJjfr7t6H3L3n3Nz3a+ZOzr3nnnO/52T3fvb3Ow+/yEwkSXpS3QVIkprBQJAkAQaCJKkw\nECRJgIEgSSqOrbuAXkSEp0RJUh8yMzq9Z+RaCJnZ+MeWLVtqr8E6rdM6rXHh0a2RCwRJ0uowECRJ\ngIGwKlqtVt0ldMU6B8s6B2sU6hyFGnsRvfQv1S0icpTqlaQmiAjyaDyoLElaHQaCJAkwECRJhYEg\nSQIMBElSYSBIkgADQZJUGAiSJMBAkCQVBoIkCaghECLizIjYGRFfiYi7I+Ly8vqpEbEjIuYi4paI\nmBx2bZI0zoZ+L6OIOAM4IzN3R8SJwBeBTcCbgW9m5vsi4p3AKZl5xaJlvZeRJPWosfcyysyHM3N3\nmX4cuAd4OvBq4LrytuuoQkKSNCS1HkOIiLOB84E7gdMzc1+ZtQ84vaayJGks1Tamcuku+jjwtsx8\nLOJQayYzc5TGT56agrk5mJiANWvggQfgvvvgrLPgpJMOvdZpfj/LjNI6t26Fycn+9l2TtuNI1rnc\nflhpfzRxOwb5M3Ak2z7I7ej087kwv5c6V9reRqppfM/jgE8Dv9P22r1UxxYA1gL3LrFcbtmy5eBj\n586d2QQXXZQJ1WPNmkPTS73WaX4/yzRlnaedtvL8zZuPbN+N8r7ptB867Y8mbkc/81dj2we1HZ1+\nPhfm91LnStu7mnbu3HnYd2X1Vd/5u7mOs4wCuBrYm5kfbpt1E3BZmb4MuHGp5aenpw8+mjJa0cRE\n9e/69bBuXTV98sk//Fqn+f0s06R1nnfeyvNnZvrfd6O+bzrth5X2RxO3o9/5g972QW5Hp5/Phfm9\n1LnS9q6mVqt12Hdl17pJjUE+gJcBB4DdwF3lsQE4FbgVmANuASaXWHaV8vTI7N9f/SWwf/+h6fvv\n/+HXOs3vZ5lRWueR7LsmbceRrHO5/bDS/mjidgzyZ+BItn2Q29Gppn7qbAq6bCE4hKYkHeUae9qp\nJKmZDARJEmAgSJIKA0GSBBgIkqTCQJAkAQaCJKkwECRJgIEgSV2ZmoJWCzZuhPn5uqtZHQaCJHVh\nbg527YLt26twOBoZCJLUhaVudHe08V5GktSF+fmqZTAzM2JjHND9vYwMBEk6ynlzO0lSTwwESRJg\nIEiSCgNBkgQYCJKkwkCQJAEGgiSpMBAkSYCBIEkqDARJEmAgSJIKA0GSBBgIkqTCQJAkAQaCJKkw\nECRJgIEgSSoMBEkSYCBIkgoDQZIEGAiSpMJAkCQBBoIkqTAQJEmAgSBJKgwESRJgIEiSCgNBkgQY\nCKrB1BS0WrBxI8zP112NpAW1BEJEXBMR+yJiT9tr0xHxUETcVR4b6qhNq29uDnbtgu3bq3CQ1Ax1\ntRCuBRZ/4Sfwwcw8vzw+VUNdGoKJierf9ethZqbeWiQdUksgZOYdwP4lZsWwa9Hwbd0KmzfDjh0w\nOVl3NZIWNO0Ywm9HxJci4uqI8KviKDU5Cdu2GQZS0xxbdwFtrgL+qEy/B/gA8GuL3zQ9PX1wutVq\n0Wq1hlCaBmFqqjp+MDFRtRIMBGl1zM7OMjs72/NykZmDr6abD444G7g5M8/tdl5EZF316si1WtXB\nZKi6jLZtq7UcaWxEBJnZsUu+MV1GEbG27elrgD3LvVejyYPJUrPV0kKIiOuBi4DTgH3AFqAFnEd1\nttF/AL+RmfsWLWcLYYTNz1fdRjMzdhdJw9RtC6G2LqN+GAiS1LuR6zKSJNXLQJAkAQaCJKkwECRJ\ngIEgSSoMBEkSYCBIkgoDQZIEGAiSpMJAkCQBBoIkqTAQJElAswbIkaTatA/gtGYNPPDA+A3mZCBI\nElUYLAzgtGYNfOMb1fTU1PgM5mSXkSRx+ABO69Ydmh6nwZwcD0GSOHwAJzi6BnNygBxJEuAAOZKk\nHhkIkiTAQJAkFQaCJAkwECRJhYEgSQIMBElSYSBIkgADQZJUGAiSJMBAkCQVBoIkCTAQJElF1wPk\nRMRTgTcALwCOAY4HDgCPA58DbsjMA6tRpCRp9XV1++uIeCVwDvCPmXnfonkBrAN+Drg1M3evRqHl\ns7z9tST1aGDjIUTE8cAzMvNrXXzouZm5p/sye2MgSFLvBjpATkQ8G3gtcDLwIPDZ1WwJrFCHgSBJ\nPRr0ADmvAD4O3AZcDPxxRHwxIt5wBDVKkhqk20B4EnBiZt4G3JyZlwAvAQ5ExFtXrTpJ0tB0Gwgz\nQCsibgU2RcQlwLOBzwMnrlZxkqTh6eoYwsE3RxxH1X30YmAt8C3g+tU8kLzo8z2GIEk9GuRZRk8B\nnpaZ3+ziQ5+ZmV/vvszeGAiS1LuBHVTOzO8DL4qIX4mIE5b5sFMiYgo4q/dSJUlN0HWXUUSsBd4M\n/CjVVcrHAT8Avgs8BHwkM7+zSnUu1GALQZJ6NNDrEBat+KlUZxzt67e4fhkIktS7QV+H0O6NwM9H\nxE0RcU1EbOijuGsiYl9E7Gl77dSI2BERcxFxS0RM9lGbJKlP/QTC/wB7gVMz8y3ASX2s41pgcZBc\nAezIzOdSXQB3RR/rlST1qZ9A+FfgdcDlEfEmerhj6oLMvAPYv+jlVwPXlenrgE191CZJ6lM/X+Z3\nA78HEBE/AjwyoFpObzsusQ84fUDrlSR1oedAaJeZOwZVyKL1ZkQsefR4enr64HSr1aLVaq1GCZI0\nsmZnZ5mdne15uZ7PMhqUiDib6r5I55bn9wKtzHy4nOK6MzN/ctEynmUkST1azbOMVstNwGVl+jLg\nxhprkaSxU0sLISKuBy4CTqM6XvCHwD8A24BnAvcDv5SZ84uWs4UgST1atQvT6mQgSFLvRrHLSJJU\nIwNBkgQYCJKkwkCQJAEGgjRUU1PQasHGjTA/3/Ht0lAZCNIQzc3Brl2wfXsVDlKTGAjSEE1MVP+u\nXw8zM/XWIi3mdQjSEM3PVy2DmRmYbBvxY2qqaj1MTMDWrYfPk46UF6ZJDdceAo8+Cp/5TPX65s2w\nbVu9teno0m0gHNHdTiX1b+F4AsAZZ1T/2pWkOnkMQapJ+/GEz32uahns2HH0dhctd4aVZ141h11G\nUk2WO55wtGq1DrWI2rvFlntdg2OXkdRwk5Pj9eXX3iI64YQqCCYm4LjjDr1ud1m9bCFIGor2FtGm\nTYdaBZs2VaEwLi2lOthCkNQo7S2i9tbCtdcaBE1hC0HS0I3b8ZO6eR2CJAlwgBxJUo8MBEkSYCBI\nkgoDQZIEGAiSpMJAkCQBBoIkqTAQJEmAgSBJKgwESRJgIEiSCgNBkgQYCJKkwkCQJAEGgiSpMBAk\nSYCBIEkqDARJEmAgSJIKA0GSBBgIkqTCQJAkAQaCJKkwECRJgIEgSSqOrbuAxSLifuBR4AfAE5l5\nQb0VSdJ4aFwgAAm0MvPbdRciSeOkqV1GUXcBkjRumhgICdwaEV+IiF+vuxhJGhdN7DJ6aWb+d0Ss\nAXZExL2ZecfCzOnp6YNvbLVatFqt4VcoSQ02OzvL7Oxsz8tFZg6+mgGJiC3A45n5gfI8m1yvJDVR\nRJCZHbviG9VlFBETEfG0Mv1U4FXAnnqrkqTx0LQuo9OBT0QEVLV9LDNvqbckSRoPje4yWswuI0nq\n3Uh2GUmS6mMgSJIAA0GSVBgIkiTAQJAkFQaCJAkwECRJhYEgSQIMBElSYSBIkgADQZJUGAiSJMBA\nkCQVBoIkCTAQJEmFgSBJAgwESVJhIEiSAANBklQYCJIkwECQJBUGgiQJMBAkSYWBIEkCDARJUmEg\nSJIAA0GSVBgIkiTAQJAkFQaCJAkwECRJhYEgSQIMBElSYSBIkgADQZJUGAiSJMBAkCQVBoIkCTAQ\nJEmFgSBJAgwESVLRqECIiA0RcW9EfDUi3ll3PZI0ThoTCBFxDPAXwAbgHOD1EfG8eqvqz+zsbN0l\ndMU6B8s6B2sU6hyFGnvRmEAALgC+lpn3Z+YTwN8Al9ZcU19G5YfEOgfLOgdrFOochRp70aRAeDrw\nYNvzh8prkqQhaFIgZN0FSNI4i8xmfA9HxIuA6czcUJ6/CziQmX/W9p5mFCtJIyYzo9N7mhQIxwL/\nBlwM/BfweeD1mXlPrYVJ0pg4tu4CFmTm/0XEbwGfBo4BrjYMJGl4GtNCkCTVq0kHlXsSEW+PiAMR\ncWrdtSwlIt4TEV+KiN0RcVtEnFl3TUuJiPdHxD2l1r+PiJPrrmkpEbE5Ir4SET+IiBfWXU+7Ubmg\nMiKuiYh9EbGn7lqWExFnRsTO8n99d0RcXndNS4mI4yPizvL7vTci3lt3TSuJiGMi4q6IuHml941k\nIJQv11cCD9Rdywrel5nrMvM84EZgS90FLeMW4PmZuQ6YA95Vcz3L2QO8BvjnugtpN2IXVF5LVWeT\nPQH8bmY+H3gR8JtN3J+Z+T3g5eX3+6eAl0fEy2ouayVvA/bS4WzOkQwE4IPAO+ouYiWZ+Vjb0xOB\nb9ZVy0oyc0dmHihP7wSeUWc9y8nMezNzru46ljAyF1Rm5h3A/rrrWElmPpyZu8v048A9wI/VW9XS\nMvO7ZfLJVMc9v11jOcuKiGcAG4GPAiueaTRygRARlwIPZeaX666lk4j4k4j4OnAZ8Kd119OFtwD/\nVHcRI8YLKldJRJwNnE/1h0rjRMSTImI3sA/YmZl7665pGR8C/gA40OmNjTnLqF1E7ADOWGLWlVRd\nGq9qf/tQilrCCnW+OzNvzswrgSsj4gqq/5Q3D7XAolOd5T1XAv+bmVuHWlybbupsIM/KWAURcSLw\nd8DbSkuhcUrL+rxy3O3TEdHKzNmayzpMRFwCPJKZd0VEq9P7GxkImfnKpV6PiBcAzwK+FBFQdW98\nMSIuyMxHhlgisHydS9hKjX95d6ozIt5E1aS8eCgFLaOH/dkk/wm0nzBwJlUrQX2KiOOAjwN/nZk3\n1l1PJ5n5nYj4JLAemK25nMVeArw6IjYCxwMnRcRfZeavLvXmkeoyysy7M/P0zHxWZj6L6hfvhXWE\nQScR8Zy2p5cCd9VVy0oiYgNVc/LScqBsFNTWKlzCF4DnRMTZEfFk4JeBm2quaWRF9Zfe1cDezPxw\n3fUsJyJOi4jJMn0C1Ukujfsdz8x3Z+aZ5fvydcDty4UBjFggLKHJzfX3RsSe0sfYAt5ecz3L+XOq\ng947ymlpf1l3QUuJiNdExINUZ558MiK2110TVBdUAgsXVO4F/rapF1RGxPXAvwDPjYgHI6KWLswO\nXgq8keqsnbvKo4lnRq0Fbi+/33cCN2fmbTXX1I0VvzO9ME2SBIx+C0GSNCAGgiQJMBAkSYWBIEkC\nDARJUmEgSJIAA0GSVBgIkiSgofcykoap3C5hiupukLdn5n01lyTVwhaCVA0eciewE3htzbVItTEQ\nNNbKnTUvKYOynAU0cghRaRgMBI27VwCPRcRlwFs5fLAbaawYCBp3LwauzszrqO4X/9ma65FqYyBo\n3K0F/j0ingKsXRjPd0FEPC0iZoZVTET8RERsGdbnSe0MBI27bwHfB34R+OAS878H3D/Eek4Gdg3x\n86SDHA9BYy0izgU2AI9n5lURsR74BeBTVF/OjwETwFepBuc5j2pEtA3AJ4BzMvNjEfE84ELgEWAP\n1dCFJ5X1XAisAT4JXFCmbwDOoRpN76GyrguBnwGuzMzvr/rGS4vYQtBYy8w9mfn+zLyqvPR1YB7Y\nD5xBdYxhN9WpqduA7wAPAw8ATwDfLcu9A/gycF+Z3paZHwF+n2p84GOBq8r0McApVC2PL2fmh8r6\nbwD2lfVKQ2cgSIe7GHgU+FlgK1UA/DjwNapB1J9CNcTjrcBPcygQbi//TlCNrXt+aW3spvrLfz/V\nF/6FwHxmfpVquMhby3IL6z+equUgDZ1dRlIREccDHwUuz8xv112PNGwGgiQJsMtIklQYCJIkwECQ\nJBUGgiQJMBAkSYWBIEkCDARJUmEgSJIA+H8o2NZqtgBqeAAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYQAAAEPCAYAAABCyrPIAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEcVJREFUeJzt3X+M5HV9x/HnWw7BBY+DcIVT+VWrqSg9oFfwV8MoxVwo\nFTVe668Utek2pi22sVWUpLepbWw1/khsSnKKSlOXetRKofSAPbi9ktRitByeHnSVFoS2HCJ3CrFS\n6r37x/ezd8M6uzuztzPf7+w8H8lkvzPf+c73vbM739d8Pt8fn8hMJEl6Rt0FSJKawUCQJAEGgiSp\nMBAkSYCBIEkqVtVdQC8iwkOiJGkJMjMWe87QtRAys/G3zZs3116DdVqndVrj7K1bQxcIkqT+MBAk\nSYCB0BetVqvuErpincvLOpfXMNQ5DDX2InrpX6pbROQw1StJTRAR5ErcqSxJ6g8DQZIEGAiSpMJA\nkCQBBoIkqTAQJEmAgSBJKgwESRJgIEiSCgNBkgTUEAgRcUpE7IiIb0bENyLi8vL4CRExFREzEXFr\nRKwZdG2SNMoGfi2jiDgZODkzd0XEscDXgNcB7wAezcwPR8T7gOMz84o5y3otI0nqUWOvZZSZD2fm\nrjL9BHAP8FzgtcA15WnXUIWEJGlAat2HEBGnA+cAdwInZebeMmsvcFJNZUnSSKptTOXSXfRF4N2Z\n+XjEodZMZuYwjZ88Pg4zMzA2BpOTsGbN/PPXroUHHoD77oPTToPVqxd+bL5lDmc9hzu/H6/Z73V2\n+tt0er8GWWe3f8Ne1tnpNfv9v9jv96bbz1fTf4+hUNP4nkcCtwC/1/bYvVT7FgDWAfd2WC43b958\n8LZjx45sggsuyITqtmnTwvPXrj003e1jneYf7noOd36nx048cfDr7GX+3PdsvvdrUHX28jfsdp2d\nXrPf/4v9fm96+Xw1+fcYpB07djxtW1lt6hffNtdxlFEAVwN7MvMTbbNuAC4r05cB13dafmJi4uCt\nKaMVjY1VPzdsgC1bFp6/fn01fdxx3T023/zDWc/hzp9vmbPPHvw6u53f6T3r9H4Nss5u/4a9rLPT\nay72+v14v5fzven289X032OQWq3W07aVXesmNZbzBrwSOADsAu4qt43ACcB2YAa4FVjTYdk+5enh\n2bev+iawb9/i82en77+/u8fmm3846znc+f14zX6vs9N7Nt/zBlVnt3/DXtbZy//qoP/GS31vuv18\nNf33qBNdthAcQlOSVrjGHnYqSWomA0GSBBgIkhpofBxaLbj4Yti/v+5qRoeBIKlxZmZg507Ytq0K\nBw2GgdAnfsORlm6xQ03VHwZCn/gNR1q6yUnYtAmmpobsTN8hV9ulK1Y6v+FIS7dmDWzdWncVo8fz\nEPpk//6qZbBli99wJNWr2/MQbCEss8UuxCVJTeU+hGXmvgNJw8pAWGbuO5A0rNyHsMzcdyCpabrd\nh2AgSNIK58XtJEk9MRAkSYCBIEkqDARJEmAgSJIKA0GSBBgIkqTCQJAkAQaCJKkwECRJgIEgSSoM\nBEkSYCBIkgoDQZIEGAiSpMJAkCQBBoIkqTAQJEmAgSBJKgwESRJgIEiSCgNBkgQYCJKkwkCQJAEG\ngiSpMBAkSYCBIEkqDARJEmAgSJKKWgIhIj4TEXsjYnfbYxMR8VBE3FVuG+uoTZJGVV0thM8Cczf4\nCXwsM88pt5trqEuSRlYtgZCZdwD7OsyKQdciSao0bR/C70bE3RFxdUSsqbsYSRolq+ouoM1VwB+X\n6Q8CHwV+Y+6TJiYmDk63Wi1ardYASpOk4TE9Pc309HTPy0VmLn813aw44nTgxsw8q9t5EZF11StJ\nwyoiyMxFu+Qb02UUEeva7r4e2D3fcyVJy6+WLqOIuBa4ADgxIh4ENgOtiDib6mij/wB+q47aJGlU\n1dZltBR2GUlS74auy0iSVC8DQZIEGAiSpMJAkCQBBoIkqTAQJElAsy5dIfXN+DjMzMDYGKxdCw88\nUE1PTsIar5olAQbC0GrfwLlRW9zMDOzcWU2vXQvf/W41PT4OW7fWV5fUJAbCkGrfwJ17Lpx6quGw\nkLGx6ueGDdX7s317Nb1lS711SU3iPoQh1b6Be85zqnDYtq36xqufNDkJmzbB1BRcd92hacNTOsRL\nVwyp/furjf+WLfCWt1RhsGGDGzlJP6nbS1cYCCtAezgYBpLmMhAkSYAXt5Mk9chAkCQBBoIkqTAQ\nJEmAgSBJKgwESRJgIEiSCgNBkgQYCJKkwkCQJAEGgiSpcDwEqSaO4qamMRCkmjiKm5rGLiOpJu2D\nHK1ff2jaUdxUFy9/LdWkfRwLcEwL9Y/jIUiSAMdDkCT1qOudyhFxDPBW4CXAEcDRwAHgCeBfgOsy\n80A/ipQk9V9XXUYRcRFwJvAPmXnfnHkBrAd+Cdiembv6UWhZl11GktSjZduHEBFHA8/LzG93sdKz\nMnN392X2xkCQpN4t607liHg+8EbgOOBB4Mv9bAksUIeBIEk9Wu6dyq8GvgjcBlwI/ElEfC0i3noY\nNUqSGqTbQHgGcGxm3gbcmJmXAC8HDkTEu/pWnSRpYLoNhC1AKyK2A6+LiEuA5wNfAY7tV3GSpMHp\n6cS0iDiSqvvoZcA64HvAtf3ckTxn/e5DkKQeLedRRkcBz87MR7tY6amZ+Z3uy+yNgSBJvVu2ncqZ\n+STw0oh4S0Q8a56VHR8R48BpvZcqSWqCrruMImId8A7gp6jOUj4S+DHwQ+Ah4FOZ+f0+1Tlbgy0E\nSepR3y5uVy5hcWxm7l1qcUtlIEhS77oNhKUMkPM24MmIeAPwKLA1M2/usbjPAL8MPJKZZ5XHTgC+\nQNXtdD/wq5m5fwn1SVqBHGGu/5ZytdP/AfYAJ2TmO4HVS3iNzwIb5zx2BTCVmS+kOgHuiiW8rqQV\nanaEuW3bqtvs9Ph43ZWtHEsJhH8F3gRcHhFvZwmtjMy8A9g35+HXAteU6WuA1y2hNkkrlCPM9d9h\nDZBTroL6SGbevYRlT6c663m2y2hfZh5fpgN4bPZ+2zLuQ5BGlCPMLV0/9yEclJlTh7P8Aq+bEdFx\nyz8xMXFwutVq0Wq1+lGCpIZZswa2bj10v31aTzc9Pc309HTPy9U2hGaHFsK9QCszHy6HuO7IzJ+d\ns4wtBEnq0TAOoXkDcFmZvgy4vsZaJGnk1NJCiIhrgQuAE4G9wB8Bfw9sBU5lnsNObSFIUu/6dmJa\nnQwESerdMHYZSZJqZCBIkgADQZJUGAiSJMBAkCQVBoIkCTAQJEmFgSBJAgwESVJhIEiSAANBklQY\nCJIkwECQJBUGgrTCjY9DqwUXX1wNQynNx0CQVriZGdi5E7Ztq8JBmo+BIK0gnVoDY2PVzw0bDg1Q\nL3XiADnSCtJqVa0BgDPOgFNPhSOPhGOOgc99rhqoXqOn2wFyVg2iGEmD0d4aOOqoQ+GwaZNhoMXZ\nZSStIJOT1cZ/agpWr64es6tI3bLLSFqh9u+v9ils2WLrYNR122VkIEjSCtdtINhlJEkCDARJUmEg\nSJIAA0GSVBgIkiTAQJAkFQaCJAkwECRJhYEgSQIMBElSYSBIkgADQZJUGAiSJMBAkCQVBoIkCTAQ\nJEmFgSBJAgwESVJhIEiSAANBklQYCJIkAFbVXcBcEXE/8APgx8BTmXlevRVJ0mhoXCAACbQy87G6\nC5GkUdLULqOouwBJGjVNDIQEtkfEVyPiN+suRpJGRRO7jF6Rmf8dEWuBqYi4NzPvmJ05MTFx8Imt\nVotWqzX4CiWpwaanp5menu55ucjM5a9mmUTEZuCJzPxouZ9NrleSmigiyMxFu+Ib1WUUEWMR8ewy\nfQzwGmB3vVVJ0mhoWpfRScCXIgKq2j6fmbfWW5IkjYZGdxnNZZeRJPVuKLuMJEn1MRAkSYCBIEkq\nDARJEmAgSJIKA0GSBBgIkqTCQJAkAQaCJKkwECRJgIEgSSoMBEkSYCBIkgoDQZIEGAiSpMJAkCQB\nBoIkqTAQJEmAgSBJKgwESRJgIEiSCgNBkgQYCJKkwkCQJAEGgiSpMBAkSYCBIEkqDARJEmAgSJIK\nA0GSBBgIkqTCQJAkAQaCJKkwECRJgIEgSSoMBEkSYCBIkgoDQZIEGAiSpMJAkCQBBoIkqWhUIETE\nxoi4NyK+FRHvq7seSRoljQmEiDgC+AtgI3Am8OaIeFG9VS3N9PR03SV0xTqXl3Uur2Gocxhq7EVj\nAgE4D/h2Zt6fmU8BfwNcWnNNSzIs/yTWubysc3kNQ53DUGMvmhQIzwUebLv/UHlMkjQATQqErLsA\nSRplkdmM7XBEvBSYyMyN5f77gQOZ+edtz2lGsZI0ZDIzFntOkwJhFfBvwIXAfwFfAd6cmffUWpgk\njYhVdRcwKzP/LyJ+B7gFOAK42jCQpMFpTAtBklSvJu1U7klEvCciDkTECXXX0klEfDAi7o6IXRFx\nW0ScUndNnUTERyLinlLr30XEcXXX1ElEbIqIb0bEjyPi3LrraTcsJ1RGxGciYm9E7K67lvlExCkR\nsaP8rb8REZfXXVMnEXF0RNxZPt97IuJDdde0kIg4IiLuiogbF3reUAZC2bheBDxQdy0L+HBmrs/M\ns4Hrgc11FzSPW4EXZ+Z6YAZ4f831zGc38Hrgn+oupN2QnVD5Wao6m+wp4Pcz88XAS4HfbuL7mZk/\nAl5VPt8/B7wqIl5Zc1kLeTewh0WO5hzKQAA+Bry37iIWkpmPt909Fni0rloWkplTmXmg3L0TeF6d\n9cwnM+/NzJm66+hgaE6ozMw7gH1117GQzHw4M3eV6SeAe4Dn1FtVZ5n5wzL5TKr9no/VWM68IuJ5\nwMXAp4EFjzQaukCIiEuBhzLz63XXspiI+NOI+A5wGfBnddfThXcC/1h3EUPGEyr7JCJOB86h+qLS\nOBHxjIjYBewFdmTmnrprmsfHgT8EDiz2xMYcZdQuIqaAkzvMupKqS+M17U8fSFEdLFDnBzLzxsy8\nErgyIq6g+qO8Y6AFFovVWZ5zJfC/mTk50OLadFNnA3lURh9ExLHA3wLvLi2Fxikt67PLfrdbIqKV\nmdM1l/U0EXEJ8Ehm3hURrcWe38hAyMyLOj0eES8BzgDujgiouje+FhHnZeYjAywRmL/ODiap8Zv3\nYnVGxNupmpQXDqSgefTwfjbJfwLtBwycQtVK0BJFxJHAF4G/zszr665nMZn5/Yi4CdgATNdczlwv\nB14bERcDRwOrI+KvMvPXOz15qLqMMvMbmXlSZp6RmWdQffDOrSMMFhMRL2i7eylwV121LCQiNlI1\nJy8tO8qGQW2twg6+CrwgIk6PiGcCvwbcUHNNQyuqb3pXA3sy8xN11zOfiDgxItaU6WdRHeTSuM94\nZn4gM08p28s3AbfPFwYwZIHQQZOb6x+KiN2lj7EFvKfmeubzSaqd3lPlsLS/rLugTiLi9RHxINWR\nJzdFxLa6a4LqhEpg9oTKPcAXmnpCZURcC/wz8MKIeDAiaunCXMQrgLdRHbVzV7k18ciodcDt5fN9\nJ3BjZt5Wc03dWHCb6YlpkiRg+FsIkqRlYiBIkgADQZJUGAiSJMBAkCQVBoIkCTAQJEmFgSBJAhp6\nLSNpkMrlEsaprgZ5e2beV3NJUi1sIUjV4CF3AjuAN9Zci1QbA0EjrVxZ85IyKMtpQCOHEJUGwUDQ\nqHs18HhEXAa8i6cPdiONFANBo+5lwNWZeQ3V9eK/XHM9Um0MBI26dcC/R8RRwLrZ8XxnRcSzI2LL\noIqJiJ+JiM2DWp/UzkDQqPse8CTwBuBjHeb/CLh/gPUcB+wc4PqkgxwPQSMtIs4CNgJPZOZVEbEB\n+BXgZqqN8+PAGPAtqsF5zqYaEW0j8CXgzMz8fES8CDgfeATYTTV04eryOucDa4GbgPPK9HXAmVSj\n6T1UXut84BeAKzPzyb7/8tIcthA00jJzd2Z+JDOvKg99B9gP7ANOptrHsIvq0NStwPeBh4EHgKeA\nH5bl3gt8HbivTG/NzE8Bf0A1PvAq4KoyfQRwPFXL4+uZ+fHy+tcBe8vrSgNnIEhPdyHwA+AXgUmq\nAPhp4NtUg6gfRTXE43bg5zkUCLeXn2NUY+ueU1obu6i++e+j2uCfD+zPzG9RDRe5vSw3+/pHU7Uc\npIGzy0gqIuJo4NPA5Zn5WN31SINmIEiSALuMJEmFgSBJAgwESVJhIEiSAANBklQYCJIkwECQJBUG\ngiQJgP8HHEUhWWAoqMkAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11485ce10>"
+       "<matplotlib.figure.Figure at 0x10984fa10>"
       ]
      },
      "metadata": {},
@@ -188,8 +188,8 @@
     "ax = fig.add_subplot(111, autoscale_on=False, xlim=(-50, 50), ylim=(-20, 50))\n",
     "ax.grid()\n",
     "\n",
-    "im = plt.imread('Car-Top-Red-icon.png')\n",
-    "newax = fig.add_axes([0.477, 0.28, 0.07, 0.1], anchor='SW')\n",
+    "im = plt.imread('quad.png')\n",
+    "newax = fig.add_axes([0.497, 0.31, 0.03, 0.1], anchor='SW')\n",
     "newax.imshow(im)\n",
     "newax.axis('off')\n",
     "ax.set_aspect('equal', 'datalim')\n",
@@ -260,58 +260,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "256"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "os.system(\"rm bot_h264.mp4\")\n",
-    "os.system(\"avconv -i bot.mp4 -c:v h264 -c:a copy bot_h264.mp4\")"
+    "# import os\n",
+    "# os.system(\"rm bot_h264.mp4\")\n",
+    "# os.system(\"avconv -i bot.mp4 -c:v h264 -c:a copy bot_h264.mp4\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "IOError",
-     "evalue": "[Errno 2] No such file or directory: '/Users/pflomacpro/GeometricPDEs/_Plane/bot_h264.mp4'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-7f112b15c28a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mHTML\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mvideo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/Users/pflomacpro/GeometricPDEs/_Plane/bot_h264.mp4'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r+b'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mencoded\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbase64\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mb64encode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvideo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m HTML(data='''<video alt=\"test\" controls>\n",
-      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: '/Users/pflomacpro/GeometricPDEs/_Plane/bot_h264.mp4'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "import io\n",
-    "import base64\n",
-    "from IPython.display import HTML\n",
+    "# import os\n",
+    "# import io\n",
+    "# import base64\n",
+    "# from IPython.display import HTML\n",
     "\n",
-    "video = io.open('/Users/pflomacpro/GeometricPDEs/_Plane/bot_h264.mp4', 'r+b').read()\n",
-    "encoded = base64.b64encode(video)\n",
-    "HTML(data='''<video alt=\"test\" controls>\n",
-    "                <source src=\"data:video/mp4;base64,{0}\" type=\"video/mp4\" />\n",
-    "             </video>'''.format(encoded.decode('ascii')))"
+    "# video = io.open('/Users/pflomacpro/GeometricPDEs/_Plane/bot_h264.mp4', 'r+b').read()\n",
+    "# encoded = base64.b64encode(video)\n",
+    "# HTML(data='''<video alt=\"test\" controls>\n",
+    "#                 <source src=\"data:video/mp4;base64,{0}\" type=\"video/mp4\" />\n",
+    "#              </video>'''.format(encoded.decode('ascii')))"
    ]
   },
   {
