3d plotting practice with plotly

--- a/_QuadrotorXY/QuadrotorFOV360.ipynb
+++ b/_QuadrotorXY/QuadrotorFOV360.ipynb
@@ -213,6 +213,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~peteflorence/7.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly\n",
+    "import plotly.plotly as py\n",
+    "import plotly.tools as tls\n",
+    "from plotly.graph_objs import *\n",
+    "from numpy import pi, cos, exp\n",
+    "\n",
+    "def fxy(x, y):\n",
+    "    A = 1  # choose a maximum amplitude \n",
+    "    return A*(cos(pi*x*y))**2 * exp(-(x**2+y**2)/2.)\n",
+    "\n",
+    "L = 4\n",
+    "x = y = np.arange(-L/2., L/2., 0.1)  # use a mesh spacing of 0.1\n",
+    "yt = y[:, np.newaxis]  # (!) make column vector\n",
+    "\n",
+    "# Get surface coordinates!\n",
+    "z = fxy(x, yt)\n",
+    "\n",
+    "trace1 = Surface(\n",
+    "    z=z,  # link the fxy 2d numpy array\n",
+    "    x=x,  # link 1d numpy array of x coords\n",
+    "    y=y   # link 1d numpy array of y coords\n",
+    ")\n",
+    "\n",
+    "# Package the trace dictionary into a data object\n",
+    "data = Data([trace1])\n",
+    "\n",
+    "# Dictionary of style options for all axes\n",
+    "axis = dict(\n",
+    "    showbackground=True, # (!) show axis background\n",
+    "    backgroundcolor=\"rgb(204, 204, 204)\", # set background color to grey\n",
+    "    gridcolor=\"rgb(255, 255, 255)\",       # set grid line color\n",
+    "    zerolinecolor=\"rgb(255, 255, 255)\",   # set zero grid line color\n",
+    ")\n",
+    "\n",
+    "# Make a layout object\n",
+    "layout = Layout(\n",
+    "    title='$f(x,y) = A \\cos(\\pi x y) e^{-(x^2+y^2)/2}$', # set plot title\n",
+    "    scene=Scene(  # (!) axes are part of a 'scene' in 3d plots\n",
+    "        xaxis=XAxis(axis), # set x-axis style\n",
+    "        yaxis=YAxis(axis), # set y-axis style\n",
+    "        zaxis=ZAxis(axis)  # set z-axis style\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "# Make a figure object\n",
+    "fig = Figure(data=data, layout=layout)\n",
+    "\n",
+    "# (@) Send to Plotly and show in notebook\n",
+    "py.iplot(fig, filename='s8_surface')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
